Grades table mock

--- a/classes.html
+++ b/classes.html
@@ -2,12 +2,188 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <title>Catalog Online</title>
 </head>
 <body>
     <div id="classes"></div>
-    <p>classes.html</p>
-    <a href="student.html">student.html</a>
+<!--    <p>classes.html</p>-->
+
+
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-4 col-xl-4 col-lg-4 col-sm-12">
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th class="text-center">LIMBA SI LITERATURA ROMANA</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Note</th>
+                            <th>Absente</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-bordered">
+                        <tbody>
+                        <tr>
+                            <td>Teza</td>
+                            <td>10</td>
+                        </tr>
+                        <tr>
+                            <td>Medie</td>
+                            <td>10</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="col-md-4 col-xl-4 col-lg-4 col-sm-12">
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th class="text-center">LIMBA ENGLEZA</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Note</th>
+                            <th>Absente</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-bordered">
+                        <tbody>
+                        <tr>
+                            <td>Teza</td>
+                            <td>10</td>
+                        </tr>
+                        <tr>
+                            <td>Medie</td>
+                            <td>10</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="col-md-4 col-xl-4 col-lg-4 col-sm-12">
+                <table class="table table-bordered">
+                    <thead>
+                    <tr>
+                        <th class="text-center">LIMBA FRANCEZA</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Note</th>
+                            <th>Absente</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                            <td>24.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                        </tr>
+                        <tr>
+                            <td>10/20.10</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-bordered">
+                        <tbody>
+                        <tr>
+                            <td>Teza</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Medie</td>
+                            <td>10</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+<!--    <a href="student.html">student.html</a>-->
 
     <!-- Scripts -->
     <script src="scripts/classes.js"></script>
@@ -37,5 +213,8 @@
         //     }
         // })
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
