--- a/catalog.html
+++ b/catalog.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Catalog Online</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/catalog.css">
     </head>
     <body>
         <div id="catalog"></div>
-        <!-- Scripts -->
         <script src="scripts/catalog.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-analytics.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-firestore.js"></script>
         <script>
-            // Your web app's Firebase configuration
             var firebaseConfig = {
                 apiKey: "AIzaSyDVQuHY_4u8Q60mjBBwN7osFy8UZFgGiD8",
                 authDomain: "catalog-online-a9e16.firebaseapp.com",
@@ -34,5 +34,8 @@
                 }
             })
         </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </body>
 </html>
