--- a/index.html
+++ b/index.html
@@ -2,7 +2,24 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>Catalog Online</title>
+</head>
 
+<body>
+    <div class="container">
+        <p class="text-center">Autentificare</p>
+        <div class="form-group">
+            <input type="text" id="userID" placeholder="Numele de utilizator...">
+            <br><br>
+            <input type="password" id="userPassword" placeholder="Parola...">
+            <br><br>
+            <button onclick="login()">Submit</button>
+        </div>
+    </div>
+    <script src="scripts/script.js" type="text/javascript"></script>
+    <script src="scripts/index.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -31,21 +48,9 @@
         //     if (user) window.location.href = "catalog.html";
         // })
     </script>
-    <title>Catalog Online</title>
-</head>
-
-<body>
-    <p>Autentificare</p>
-    <div>
-        <input type="text" id="userID" placeholder="Numele de utilizator...">
-        <br><br>
-        <input type="password" id="userPassword" placeholder="Parola...">
-        <br><br>
-        <button onclick="login()">Submit</button>
-    </div>
-    <script src="scripts/script.js" type="text/javascript"></script>
-    <script src="scripts/index.js"></script>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
